further styling fixes for all pages, spacing, margin, padding etc

--- a/css/style.css
+++ b/css/style.css
@@ -267,7 +267,7 @@ h1, h2, p, b, a {
 }
 p {
     color: #000;
-    padding: 5px;
+    padding: 0px;
 }
 .hero-2 {
 	height: 450px;
@@ -316,7 +316,7 @@ br {
 	line-height: 2.0em;
 }
 .commercial-content p {
-	padding: 5px;
+	padding: 10px;
 }
 .our-work, .domestic-content {
 	width: 50%;
@@ -363,7 +363,7 @@ br {
 	line-height: 2.0em;
 }
 .domestic-content p {
-	padding: 5px;
+	padding: 10px;
 }
 .domestic {
 	width: 50%;
@@ -372,6 +372,9 @@ br {
 	list-style: none;
 	margin-top: 30px;
 	float: left;
+}
+.domestic p {
+	margin: 20px;
 }
 .kitchen-clean img {
 	float: left;
